restrict allowed headers